created streamlit frontend to interface with backend

--- a/Pipfile
+++ b/Pipfile
@@ -20,6 +20,8 @@ streamlit-chat = "*"
 tqdm = "*"
 langchain-pinecone = "*"
 langchain-openai = "*"
+langchain-community = "*"
+python-dotenv = "*"
 
 [dev-packages]
 
